--- a/score.css
+++ b/score.css
@@ -68,6 +68,7 @@ button,
 .scoreguest-container>p,
 button {
     font-family: 'Cursed Timer ULiL', sans-serif;
+    src: url('http: //fonts.cdnfonts.com/css/cursed-timer-ulil');
 
 }
 
